--- a/app/src/main/res/layout/fragment_enter_values.xml
+++ b/app/src/main/res/layout/fragment_enter_values.xml
@@ -13,14 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:inputType="numberDecimal" />
+        android:inputType="numberSigned" />
 
     <EditText
         android:id="@+id/et_second_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:inputType="numberDecimal" />
+        android:inputType="numberSigned" />
 
     <Button
         android:id="@+id/btn_find_sum"
