--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -9,7 +9,7 @@
         android:id="@+id/txt_result"
         android:layout_width="wrap_content"
         android:textSize="26sp"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:layout_height="wrap_content" />
 
 </FrameLayout>
